# rc_cars

./: README.md
Car/: Car.ino  camera.ino  eeprom.ino  settings.ino  web_sockets.ino  wifi.ino
Server/: .pre-commit-config.yaml  Dockerfile  client.html  client2.html  compose.yml  lobby.html  pyproject.toml
Server/manual_tests/: README.md  car_server.py  fake_car.py  fake_client.py  local_client.py  udp_client.py  udp_server.py
Server/manual_tests/go_server/: README.md  go.mod  main.go
Server/manual_tests/rust_server/: Cargo.toml
Server/manual_tests/rust_server/src/: main.rs
Server/src/: __main__.py  application.py  client.html  contracts.py  managers.py
Server/src/routes/: dependencies.py  rest.py  ws.py
