[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["jonny <aes1993rich@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
websockets = "^14.1"
redis = "^5.2.0"
httpx = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
